--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,5 +1,20 @@
-<h1>
+<div class="container-fluid">
+  <h1>
     Hello World!
 </h1>
-<%= link_to "Privacy Policy", privacy_policy_path %>
+<%= link_to "Privacy Policy", privacy_policy_path, class: "btn btn-lg btn-warning" %>
+<%= link_to  privacy_policy_path, class: "btn btn-lg btn-warning" do %>
+    <i class="fa-solid fa-file"></i>
+    Privacy Policy
+    <% end %>
+</div>
+<h1>Example heading <span class="badge bg-secondary">New</span></h1>
+<h2>Example heading <span class="badge bg-secondary">New</span></h2>
+<h3>Example heading <span class="badge bg-secondary">New</span></h3>
+<h4>Example heading <span class="badge bg-secondary">New</span></h4>
+<h5>Example heading <span class="badge bg-secondary">New</span></h5>
+<h6>Example heading <span class="badge bg-secondary">New</span></h6>
 
+<button type="button" class="btn btn-primary">
+  Notifications <span class="badge bg-secondary">4</span>
+</button>
