--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -23,7 +23,11 @@
 <br>
 <b><%= 'user.user.last_sign_in_ip' .humanize %>:</b>
 <%= user.last_sign_in_ip %>
-
-
+<br>
+<b><%= 'locked_at' .humanize %>:</b>
+<%= user.locked_at %>
+<br>
+<%= link_to ban_status(user), ban_user_path(user), method: :patch %>
+<%= link_to "Delete", user, method: :delete, data: {confirm: "Are you sure"} %>
 
 
