--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,10 @@
           <div class="fa fa-users"></div>
           Users
         <% end %>
+         <%= link_to locations_path, class: "nav-link #{'active fw-bold' if current_page?(locations_path)}" do %>
+          <div class="fa fa-location-pin"></div>
+          Location
+        <% end %>
         <%= link_to trainings_path, class: "nav-link #{'active fw-bold' if current_page?(trainings_path)}" do %>
           <div class="fa fa-person-running"></div>
           Training
