--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,6 +19,11 @@
         </ul>
     </div>
     <% end %>
+    
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    
+    <br>
    
    <% User::ROLES.each do |role| %>
     <label>
